general alignment fix

--- a/back-end/public/css/general.css
+++ b/back-end/public/css/general.css
@@ -138,6 +138,7 @@ section {
 }
 body {
   position: relative;
+  overflow-x: hidden;
 }
 .container {
   max-width: 120rem;
